# Collatz

./: .gitattributes  .gitignore  ADD_LANG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  _config.yml  devlog.md  implementation_readme_template.md  index.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
C#/: .gitignore  README.md
LaTeX/: .gitignore  Makefile  README.md  devlog.md  document.tex
R/: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  Makefile  (+13 more)
python/: .buildinfo  .flake8  .gitignore  .pylintrc  .pypirc-example  LICENSE  MANIFEST.in  Makefile  README.md  devlog.md  index.html  objects.inv  pylama.ini  pyproject.toml  requirements-venv-frozen.txt  requirements-venv.txt  searchindex.js  setup.cfg  setup.py  tox.ini
python/.demo/: .gitignore  Makefile
python/.demo/_/: function.py  hailstone_sequence.py  parameterised.py  reverse_function.py  stopping_time.py  tree_graph.py
python/.doctrees/: collatz.doctree  collatz.parameterised.doctree  environment.pickle  index.doctree  modules.doctree
python/_modules/: index.html
python/_modules/collatz/parameterised/: index.html
python/collatz/: index.html
python/collatz.parameterised/: index.html
python/docs/source/: collatz.parameterised.rst  collatz.rst  conf.py  index.rst  modules.rst
python/genindex/: index.html
python/modules/: index.html
python/py-modindex/: index.html
python/search/: index.html
python/src/collatz/: __init__.py  __version__.py  collatz.py  parameterised.py
python/tests/: test_collatz.py  test_parameterised.py
(+417 files in other folders)
