[metadata]
name = collatz-skenvy  #TODO: UPDATE
author = Skenvy
author_email = nathan.a.z.levett@gmail.com
description = Enabling experimenting with functions related to or involved in the Collatz conjecture.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Skenvy/Collatz
project_urls =
    Bug Tracker = https://github.com/Skenvy/Collatz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
